--- a/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
     <head>
-        <title></title>
+        <title>Loading - Pisqorks</title>
 
         @Styles.Render("~/stylesheet/libraries")
         @Scripts.Render("~/javascript/libraries")
@@ -30,9 +30,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
                 
                 <div class="content-body">
                     
@@ -42,11 +39,16 @@
         </div>
         <div class="foot muted">
             <div class="container">
-                Pisqorks &copy; 2013 - 1.0
+                <div class="left">
+                    Pisqorks &copy; 2013 - 1.0
+                </div>
+                <div class="right loading hide">
+                    Loading...
+                </div>
             </div>
         </div>
 
-        <div id="login-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <form id="login-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>
@@ -56,14 +58,14 @@
                 </h3>
             </div>
             <div class="modal-body row">
-                <form class="span4">
+                <div class="span4">
                     <input type="text" placeholder="User name" class="input-block-level" />
                     <input type="password" placeholder="Password" class="input-block-level" />
 
                     <label class="checkbox">
                         <input type="checkbox"> Remember me
                     </label>
-                </form>
+                </div>
                 <div class="span3">
                     Google account<br />
                     Facebook<br />
@@ -74,29 +76,11 @@
                 <button class="btn btn-primary">Sign in</button>
                 <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
             </div>
-        </div>
+        </form>
 
         <script>
 
-            var router = new Pisqorks.Router();
-            router.RegisterRoute("/", "Home", function () {
-                alert("Going to home!");
-            });
-            router.RegisterRoute("/account/login", "Sign in", function () {
-                $("#login-modal").modal('show');
-            });
-
-            var navigationBar = new Pisqorks.UI.NavigationBar(".navbar ul.nav", router);
-            navigationBar.AddButton("Home", "/", "home");
-            navigationBar.AddButton("Sign in", "/account/login", null, true);
-
-
-
-            $("#login-modal")
-                .on("hidden", function () {
-                    router.Navigate("/");
-                })
-                .modal({ show: false });
+            Pisqorks.Application.Start();
 
         </script>
     </body>
