--- a/Pisqorks.WebUI/Content/Site.css
+++ b/Pisqorks.WebUI/Content/Site.css
@@ -1,4 +1,17 @@
-﻿html, body {
+﻿/* COMMON ------------------------------------------------------------------------------------- */
+
+.left {
+    float: left;
+}
+
+.right,
+.navbar .nav > li.right {
+    float: right;
+}
+
+/* LAYOUT ------------------------------------------------------------------------------------- */
+
+html, body {
     height: 100%;
 }
 
@@ -16,10 +29,6 @@
 .navbar .nav {
     width: 100%;
 }
-
-    .navbar .nav > li.nav-right {
-        float: right;
-    }
 
 .navbar .navbar-inner {
     padding: 0;
@@ -39,6 +48,14 @@
     background-color: #f5f5f5;
     border-top: 1px solid #d4d4d4;
 }
+
+    .foot .loading {
+        padding: 0 5px;
+        font-weight: bold;
+        color: white;
+        background: red;
+        border-radius: 4px;
+    }
 
 /* HOME --------------------------------------------------------------------------------------- */
 
