--- a/trunk/Pisqorks.WebUI/Content/Site.css
+++ b/trunk/Pisqorks.WebUI/Content/Site.css
@@ -11,19 +11,15 @@
 
 /* LAYOUT ------------------------------------------------------------------------------------- */
 
-html, body {
+html, body, .all {
     height: 100%;
 }
 
-.all {
+.app {
     min-height: 100%;
     height: auto !important;
     height: 100%;
     margin: 0 auto -41px;
-}
-
-.head {
-    padding: 0 5px;
 }
 
 .navbar .nav {
@@ -34,6 +30,7 @@ html, body {
     padding: 0;
 }
 
+.head, 
 .content-body {
     padding: 0 10px;
 }
@@ -59,7 +56,42 @@ html, body {
 
 /* HOME --------------------------------------------------------------------------------------- */
 
+/* FEATURES ----------------------------------------------------------------------------------- */
 
+ul.feature-browserlist {
+    height: 120px;
+    list-style: none;
+    margin: 20px 0;
+}
+    ul.feature-browserlist li {
+        float: left;
+    }
+
+        ul.feature-browserlist li a {
+            width: 120px;
+            height: 120px;
+            display: block;
+            float: left;
+            margin: 0 5px;
+            background: url("images/browsers.png") no-repeat;
+        }
+        
+            ul.feature-browserlist li a.chrome {
+                background-position: -10px 0;
+            }
+            ul.feature-browserlist li a.firefox {
+                background-position: -140px 0;
+            }
+            ul.feature-browserlist li a.opera {
+                background-position: -260px 0;
+            }
+            ul.feature-browserlist li a.ie {
+                background-position: -520px 0;
+            }
+
+            ul.feature-browserlist li a span {
+                display: none;
+            }
 
 /* ACCOUNT - LOGIN ---------------------------------------------------------------------------- */
 
