--- a/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -8,75 +8,53 @@
         @Scripts.Render("~/javascript/pisqorks")
     </head>
     <body>
-        <div class="all">
-            <div class="container">
+        <div class="all hide">
+            <div class="app">
+                <div class="container">
 
-                <div class="head">
-                    <h3>
-                        <span class="muted">Pisqorks</span>
-                        -
-                        <span id="sub-title"></span>
-                    </h3>
+                    <div class="head">
+                        <h3>
+                            <span class="muted">Pisqorks</span>
+                            -
+                            <span id="sub-title"></span>
+                        </h3>
 
 
-                </div>
+                    </div>
 
-                <div class="navbar">
-                    <div class="navbar-inner">
-                        <div class="container">
-                            <ul class="nav">
+                    <div class="navbar">
+                        <div class="navbar-inner">
+                            <div class="container">
+                                <ul class="nav">
 
-                            </ul>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
                 
-                <div class="content-body">
+                    <div class="content-body">
                     
-                </div>
+                    </div>
 
+                </div>
+            </div>
+            <div class="foot muted">
+                <div class="container">
+                    <div class="left">
+                        Pisqorks &copy; 2013 - 1.0.0
+                    </div>
+                    <div class="right loading hide">
+                        Loading...
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="foot muted">
-            <div class="container">
-                <div class="left">
-                    Pisqorks &copy; 2013 - 1.0
-                </div>
-                <div class="right loading hide">
-                    Loading...
-                </div>
-            </div>
-        </div>
 
-        <form id="login-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3>
-                    <span class="muted">Pisqorks</span>
-                    -
-                    <span>Sign in</span>
-                </h3>
-            </div>
-            <div class="modal-body row">
-                <div class="span4">
-                    <input type="text" placeholder="User name" class="input-block-level" />
-                    <input type="password" placeholder="Password" class="input-block-level" />
-
-                    <label class="checkbox">
-                        <input type="checkbox"> Remember me
-                    </label>
-                </div>
-                <div class="span3">
-                    Google account<br />
-                    Facebook<br />
-                    Twitter<br />
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary">Sign in</button>
-                <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-            </div>
-        </form>
+        
+        
+        @{ Html.RenderPartial("Login"); }
+        @{ Html.RenderPartial("Feature"); }
+        
 
         <script>
 
