Navigation using hash + user context preview

--- a/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -58,6 +58,10 @@
 
         <script>
 
+            var anonymousContext = {
+
+            };
+
             Pisqorks.Application.Start();
 
         </script>
