--- a/trunk/Pisqorks.WebUI/Views/Content/Register.cshtml
+++ b/trunk/Pisqorks.WebUI/Views/Content/Register.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 }
 
-<form id="login-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+<form id="register-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3>
@@ -13,23 +13,18 @@
     </div>
     <div class="modal-body row">
         <div class="span4">
+            <input type="text" placeholder="Display name (visible to others)" class="input-block-level" data-binding="DisplayName" />
             <input type="text" placeholder="User name" class="input-block-level" data-binding="Username" />
             <input type="password" placeholder="Password" class="input-block-level" data-binding="Password" />
 
             <label class="checkbox">
-                <input type="checkbox" data-binding="Persistent" /> Remember me
+                <input type="checkbox" data-binding="SignIn" /> Sign me in after registration
             </label>
-        </div>
-        <div class="span3">
-            Microsoft Live<br />
-            Google<br />
-            Facebook<br />
-            Twitter<br />
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary">Sign in</button>
-        <a class="btn btn-info" href="#/account/register">Register new account</a>
+        <button class="btn btn-primary">Register new account</button>
+        <a class="btn btn-info" href="#/account/login">Sign in</a>
         <a class="btn" data-dismiss="modal" aria-hidden="true">Close</a>
     </div>
 </form>
