Separation of account module + register view

--- a/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -53,6 +53,7 @@
         
         
         @{ Html.RenderPartial("Login"); }
+        @{ Html.RenderPartial("Register"); }
         @{ Html.RenderPartial("Feature"); }
         
 
