--- a/Pisqorks.WebUI/Views/Content/Register.cshtml
+++ b/Pisqorks.WebUI/Views/Content/Register.cshtml
@@ -8,7 +8,7 @@
         <h3>
             <span class="muted">Pisqorks</span>
             -
-            <span>Sign in</span>
+            <span>Register new account</span>
         </h3>
     </div>
     <div class="modal-body row">
@@ -16,6 +16,7 @@
             <input type="text" placeholder="Display name (visible to others)" class="input-block-level" data-binding="DisplayName" />
             <input type="text" placeholder="User name" class="input-block-level" data-binding="Username" />
             <input type="password" placeholder="Password" class="input-block-level" data-binding="Password" />
+            <input type="password" placeholder="Password (re-type)" class="input-block-level" data-binding="PasswordAgain" />
 
             <label class="checkbox">
                 <input type="checkbox" data-binding="SignIn" /> Sign me in after registration
