--- a/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -13,6 +13,8 @@
                 <div class="container">
 
                     <div class="head">
+                        <div id="user-info-view" class="right muted"></div>
+
                         <h3>
                             <span class="muted">Pisqorks</span>
                             -
