--- a/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -4,7 +4,10 @@
         <title>Loading - Pisqorks</title>
 
         @Styles.Render("~/stylesheet/libraries")
+        
         @Scripts.Render("~/javascript/libraries")
+        <script src="~/signalr/hubs"></script>
+
         @Scripts.Render("~/javascript/pisqorks")
     </head>
     <body>
