--- a/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -60,13 +60,10 @@
         @{ Html.RenderPartial("Login"); }
         @{ Html.RenderPartial("Register"); }
         @{ Html.RenderPartial("Feature"); }
+        @{ Html.RenderPartial("GameCreate"); }
         
 
         <script>
-
-            var anonymousContext = {
-
-            };
 
             Pisqorks.Application.Start();
 
