--- a/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/trunk/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -3,7 +3,7 @@
     <head>
         <title>Loading - Pisqorks</title>
 
-        @Styles.Render("~/stylesheet/libraries")
+        @Styles.Render("~/content/stylesheet")
         
         @Scripts.Render("~/javascript/libraries")
         <script src="~/signalr/hubs"></script>
@@ -15,19 +15,29 @@
             <div class="app">
                 <div class="container">
 
-                    <div class="head">
+                    <header>
                         <div id="user-info-view" class="right muted"></div>
+                        
 
-                        <h3>
+                        <table class="game-board game-board-auto">
+                            <tr>
+                                <td></td><td></td>
+                            </tr>
+                            <tr>
+                                <td></td><td></td>
+                            </tr>
+                        </table>
+                        <h1>
                             <span class="muted">Pisqorks</span>
                             -
                             <span id="sub-title"></span>
-                        </h3>
+                        </h1>
 
+                        <div class="clear"></div>
+                    </header>
 
-                    </div>
-
-                    <div class="navbar">
+                    <nav class="navbar">
+                        <h3>Menu</h3>
                         <div class="navbar-inner">
                             <div class="container">
                                 <ul class="nav">
@@ -35,7 +45,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </nav>
                 
                     <div class="content-body">
                     
@@ -45,8 +55,12 @@
             </div>
             <div class="foot muted">
                 <div class="container">
-                    <div class="left">
-                        Pisqorks &copy; 2013 - 1.0.0
+                    <div class="left" itemscope="itemscope" itemtype="http://schema.org/Person">
+                        Pisqorks -
+                        <span itemprop="name">Marek Fišera</span>
+                        -
+                        <span itemprop="affiliation">Neptuo</span>
+                        &copy; 2013 - 1.0.1
                     </div>
                     <div class="right loading hide">
                         Loading...
