--- a/trunk/Pisqorks.WebUI/Content/Site.css
+++ b/trunk/Pisqorks.WebUI/Content/Site.css
@@ -105,18 +105,58 @@ header h1 {
 }
 
 .game-board-auto tr:first-child td:first-child {
+    animation: playPisq1 5s linear infinite;
+    -moz-animation: playPisq1 5s linear infinite;
     -webkit-animation: playPisq1 5s linear infinite;
 }
 .game-board-auto tr:first-child td:last-child {
+    animation: playPisq2 5s linear infinite;
+    -moz-animation: playPisq2 5s linear infinite;
     -webkit-animation: playPisq2 5s linear infinite;
 }
 .game-board-auto tr:last-child td:first-child {
+    animation: playPisq3 5s linear infinite;
+    -moz-animation: playPisq3 5s linear infinite;
     -webkit-animation: playPisq3 5s linear infinite;
 }
 .game-board-auto tr:last-child td:last-child {
+    animation: playPisq4 5s linear infinite;
+    -moz-animation: playPisq4 5s linear infinite;
     -webkit-animation: playPisq4 5s linear infinite;
 }
     
+@keyframes playPisq1 {
+	0%, 100% { background-image: none; }
+	20%, 40%, 60%, 80% { background-image: url("images/round_15.png"); }
+}
+@keyframes playPisq2 {
+	0%, 20%, 100% { background-image: none; }
+	40%, 60%, 80% { background-image: url("images/cross_15.png"); }
+}
+@keyframes playPisq3 {
+	0%, 20%, 40%, 60%, 100% { background-image: none; }
+	80% { background-image: url("images/cross_15.png"); }
+}
+@keyframes playPisq4 {
+	0%, 20%, 40%, 100% { background-image: none; }
+	60%, 80% { background-image: url("images/round_15.png"); }
+}
+@-moz-keyframes playPisq1 {
+	0%, 100% { background-image: none; }
+	20%, 40%, 60%, 80% { background-image: url("images/round_15.png"); }
+}
+@-moz-keyframes playPisq2 {
+	0%, 20%, 100% { background-image: none; }
+	40%, 60%, 80% { background-image: url("images/cross_15.png"); }
+}
+@-moz-keyframes playPisq3 {
+	0%, 20%, 40%, 60%, 100% { background-image: none; }
+	80% { background-image: url("images/cross_15.png"); }
+}
+@-moz-keyframes playPisq4 {
+	0%, 20%, 40%, 100% { background-image: none; }
+	60%, 80% { background-image: url("images/round_15.png"); }
+}
 @-webkit-keyframes playPisq1 {
 	0%, 100% { background-image: none; }
 	20%, 40%, 60%, 80% { background-image: url("images/round_15.png"); }
@@ -125,13 +165,13 @@ header h1 {
 	0%, 20%, 100% { background-image: none; }
 	40%, 60%, 80% { background-image: url("images/cross_15.png"); }
 }
-@-webkit-keyframes playPisq4 {
-	0%, 20%, 40%, 100% { background-image: none; }
-	60%, 80% { background-image: url("images/round_15.png"); }
-}
 @-webkit-keyframes playPisq3 {
 	0%, 20%, 40%, 60%, 100% { background-image: none; }
 	80% { background-image: url("images/cross_15.png"); }
+}
+@-webkit-keyframes playPisq4 {
+	0%, 20%, 40%, 100% { background-image: none; }
+	60%, 80% { background-image: url("images/round_15.png"); }
 }
             
 /* HOME --------------------------------------------------------------------------------------- */
@@ -201,6 +241,17 @@ ul.feature-browserlist {
         background-image: url("images/cross.png");
     }
 
+    .game-board td.round, .game-board td.cross {
+        animation: hightlight 3s linear 1;
+        -moz-animation: hightlight 3s linear 1;
+        -webkit-animation: hightlight 3s linear 1;
+    }
+
+@-webkit-keyframes hightlight {
+	0%, 50%, 100% { background-color: transparent; }
+	25%, 75% { background-color: yellow; }
+}
+
 .game-board-disabled td {
-    opacity: 0.3;
+    opacity: 0.5;
 }
