"We are the Champions"

--- a/Pisqorks.WebUI/Views/Content/Home.cshtml
+++ b/Pisqorks.WebUI/Views/Content/Home.cshtml
@@ -65,6 +65,14 @@
                     <div class="right loading hide">
                         Loading...
                     </div>
+                    <div class="right">
+
+                        <audio controls="controls">
+                            <source src="content/sounds/champions.mp3" type="audio/mp3" />
+                            <source src="content/sounds/champions.ogg" type="audio/ogg" />
+                        </audio>
+
+                    </div>
                 </div>
             </div>
         </div>
