--- a/Pisqorks.WebUI/Views/Content/About.cshtml
+++ b/Pisqorks.WebUI/Views/Content/About.cshtml
@@ -19,6 +19,6 @@
     <h2>About author</h2>
     <p>
         My name is Marek Fišera. I'm currently (summer 2013) 2nd year student of Master program of Open Informatics at Faculty of Electical Engineering at Czech Technical University
-        in Prague. <a href="people.neptuo.com/mara">More about me can be found at my profile at neptuo</a>
+        in Prague. <a target="_blank" href="http://people.neptuo.com/mara">More about me can be found at my profile at neptuo</a>
     </p>
 </article>
