--- a/Pisqorks.WebUI/Content/Site.css
+++ b/Pisqorks.WebUI/Content/Site.css
@@ -276,19 +276,24 @@ ul.feature-browserlist {
         display: inline-block;
         line-height: 14px;
         vertical-align: text-top;
+        border: 1px solid;
         background: red;
     }
 
+    
     .stats-legend li:first-child i {
-        background-color: green;
+        border-color: #649864;
+        background-color: #90E390;
     }
 
     .stats-legend li:nth-child(2n) i {
-        background-color: red;
+        border-color: #BC2727;
+        background-color: #FA8383;
     }
 
     .stats-legend li:last-child i {
-        background-color: blue;
+        border-color: #A2ADBF;
+        background-color: #D8E8FF;
     }
 
 /* MAKE IT SMALLER ---------------------------------------------------------------------------- */
